--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
 
-    <a-scene embedded arjs>
+    <a-scene embedded arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:720; displayWidth: 1280; displayHeight: 720;'>
 
         <a-assets>
             <video id="vid" src="video.mp4" loop="true" playsinline webkit-playsinline></video>
